--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
             aspiring photographers.
           </p>
         </div>
-        <div class="down">
-          <h1 class="price">$19.00 <span>per month</span></h1>
-          <button type="button" class="plan">PICK PLAN</button>
+        <div class="peryear">
+          <h1 class="price">$<span class="number">19</span>.00</h1>
+          <span class="per">per month</span>
         </div>
+        <button type="button" class="plan">PICK PLAN</button>
       </div>
       <div class="basic pro">
         <div class="top">
@@ -91,12 +92,11 @@
             veterans and professionals.
           </p>
         </div>
-        <div class="down">
-          <h1 class="price">
-            $39.00 <span class="secondspan">per month</span>
-          </h1>
-          <button type="button" class="plan">PICK PLAN</button>
+        <div class="peryear">
+          <h1 class="price">$<span class="number dark">39</span>.00</h1>
+          <span class="secondspan per">per month</span>
         </div>
+        <button type="button" class="plan">PICK PLAN</button>
       </div>
       <div class="basic buisness">
         <div class="top">
@@ -106,10 +106,11 @@
             Recommended for business owners.
           </p>
         </div>
-        <div class="down">
-          <h1 class="price">$99.00 <span>per month</span></h1>
-          <button type="button" class="plan">PICK PLAN</button>
+        <div class="peryear">
+          <h1 class="price">$<span class="number">99</span>.00</h1>
+          <span class="per">per month</span>
         </div>
+        <button type="button" class="plan">PICK PLAN</button>
       </div>
     </section>
     <h1 class="compare">COMPARE</h1>
