--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="peryear">
           <h1 class="price">$<span class="number">19</span>.00</h1>
-          <span class="per">per month</span>
+          <span class="per">per <span class="monthtofyear">month</span></span>
         </div>
         <button type="button" class="plan">PICK PLAN</button>
       </div>
@@ -94,7 +94,9 @@
         </div>
         <div class="peryear">
           <h1 class="price">$<span class="number dark">39</span>.00</h1>
-          <span class="secondspan per">per month</span>
+          <span class="per-second"
+            >per <span class="monthtofyear-second">month</span></span
+          >
         </div>
         <button type="button" class="plan">PICK PLAN</button>
       </div>
@@ -108,7 +110,7 @@
         </div>
         <div class="peryear">
           <h1 class="price">$<span class="number">99</span>.00</h1>
-          <span class="per">per month</span>
+          <span class="per">per <span class="monthtofyear">month</span></span>
         </div>
         <button type="button" class="plan">PICK PLAN</button>
       </div>
